@@ -1,0 +1,10 @@
+package Project2::Gantt::Skin::Small;
+
+use Mojo::Base 'Project2::Gantt::Skin';
+
+# DATE
+our $VERSION = '0.007';
+
+# use all defaults
+
+1;
